src/wrapper.zig

pub extern fn ffppnj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_long, nulval: c_long, status: [*c]c_int) c_int;
pub extern fn ffppnuj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_ulong, nulval: c_ulong, status: [*c]c_int) c_int;
pub extern fn ffppnuk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_uint, nulval: c_uint, status: [*c]c_int) c_int;
pub extern fn ffppnk(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]c_int, nulval: c_int, status: [*c]c_int) c_int;
pub extern fn ffppne(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f32, nulval: f32, status: [*c]c_int) c_int;
pub extern fn ffppnd(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]f64, nulval: f64, status: [*c]c_int) c_int;
pub extern fn ffppnjj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]LONGLONG, nulval: LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffppnujj(fptr: [*c]fitsfile, group: c_long, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]ULONGLONG, nulval: ULONGLONG, status: [*c]c_int) c_int;
pub extern fn ffp2db(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffp2dsb(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]i8, status: [*c]c_int) c_int;
pub extern fn ffp2dui(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_ushort, status: [*c]c_int) c_int;
pub extern fn ffp2di(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_short, status: [*c]c_int) c_int;
pub extern fn ffp2duj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffp2dj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffp2duk(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_uint, status: [*c]c_int) c_int;
pub extern fn ffp2dk(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffp2de(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]f32, status: [*c]c_int) c_int;
pub extern fn ffp2dd(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]f64, status: [*c]c_int) c_int;
pub extern fn ffp2djj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffp2dujj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, array: [*c]ULONGLONG, status: [*c]c_int) c_int;
pub extern fn ffp3db(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffp3dsb(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]i8, status: [*c]c_int) c_int;
pub extern fn ffp3dui(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_ushort, status: [*c]c_int) c_int;
pub extern fn ffp3di(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_short, status: [*c]c_int) c_int;
pub extern fn ffp3duj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffp3dj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffp3duk(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_uint, status: [*c]c_int) c_int;
pub extern fn ffp3dk(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffp3de(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]f32, status: [*c]c_int) c_int;
pub extern fn ffp3dd(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]f64, status: [*c]c_int) c_int;
pub extern fn ffp3djj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffp3dujj(fptr: [*c]fitsfile, group: c_long, ncols: LONGLONG, nrows: LONGLONG, naxis1: LONGLONG, naxis2: LONGLONG, naxis3: LONGLONG, array: [*c]ULONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpss(fptr: [*c]fitsfile, datatype: c_int, fpixel: [*c]c_long, lpixel: [*c]c_long, array: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffpssb(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpsssb(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]i8, status: [*c]c_int) c_int;
pub extern fn ffpssui(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]c_ushort, status: [*c]c_int) c_int;
pub extern fn ffpssi(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]c_short, status: [*c]c_int) c_int;
pub extern fn ffpssuj(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffpssj(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffpssuk(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]c_uint, status: [*c]c_int) c_int;
pub extern fn ffpssk(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffpsse(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]f32, status: [*c]c_int) c_int;
pub extern fn ffpssd(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]f64, status: [*c]c_int) c_int;
pub extern fn ffpssjj(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpssujj(fptr: [*c]fitsfile, group: c_long, naxis: c_long, naxes: [*c]c_long, fpixel: [*c]c_long, lpixel: [*c]c_long, array: [*c]ULONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpgpb(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpgpsb(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]i8, status: [*c]c_int) c_int;
pub extern fn ffpgpui(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_ushort, status: [*c]c_int) c_int;
pub extern fn ffpgpi(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_short, status: [*c]c_int) c_int;
pub extern fn ffpgpuj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_ulong, status: [*c]c_int) c_int;
pub extern fn ffpgpj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffpgpuk(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_uint, status: [*c]c_int) c_int;
pub extern fn ffpgpk(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffpgpe(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]f32, status: [*c]c_int) c_int;
pub extern fn ffpgpd(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]f64, status: [*c]c_int) c_int;
pub extern fn ffpgpjj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn ffpgpujj(fptr: [*c]fitsfile, group: c_long, firstelem: c_long, nelem: c_long, array: [*c]ULONGLONG, status: [*c]c_int) c_int;
pub extern fn fits_iter_set_by_name(col: [*c]iteratorCol, fptr: [*c]fitsfile, colname: [*c]u8, datatype: c_int, iotype: c_int) c_int;
pub extern fn fits_iter_set_by_num(col: [*c]iteratorCol, fptr: [*c]fitsfile, colnum: c_int, datatype: c_int, iotype: c_int) c_int;
pub extern fn fits_iter_set_file(col: [*c]iteratorCol, fptr: [*c]fitsfile) c_int;
pub extern fn fits_iter_set_colname(col: [*c]iteratorCol, colname: [*c]u8) c_int;
pub extern fn fits_iter_set_colnum(col: [*c]iteratorCol, colnum: c_int) c_int;
pub extern fn fits_iter_set_datatype(col: [*c]iteratorCol, datatype: c_int) c_int;
pub extern fn fits_iter_set_iotype(col: [*c]iteratorCol, iotype: c_int) c_int;
pub extern fn fits_iter_get_file(col: [*c]iteratorCol) [*c]fitsfile;
pub extern fn fits_iter_get_colname(col: [*c]iteratorCol) [*c]u8;
pub extern fn fits_iter_get_colnum(col: [*c]iteratorCol) c_int;
pub extern fn fits_iter_get_datatype(col: [*c]iteratorCol) c_int;
pub extern fn fits_iter_get_iotype(col: [*c]iteratorCol) c_int;
pub extern fn fits_iter_get_array(col: [*c]iteratorCol) ?*anyopaque;
pub extern fn fits_iter_get_tlmin(col: [*c]iteratorCol) c_long;
pub extern fn fits_iter_get_tlmax(col: [*c]iteratorCol) c_long;
pub extern fn fits_iter_get_repeat(col: [*c]iteratorCol) c_long;
pub extern fn fits_iter_get_tunit(col: [*c]iteratorCol) [*c]u8;
pub extern fn fits_iter_get_tdisp(col: [*c]iteratorCol) [*c]u8;
pub extern fn ffiter(ncols: c_int, data: [*c]iteratorCol, offset: c_long, nPerLoop: c_long, workFn: ?*const fn (c_long, c_long, c_long, c_long, c_int, [*c]iteratorCol, ?*anyopaque) callconv(.C) c_int, userPointer: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffpcl(fptr: [*c]fitsfile, datatype: c_int, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffpcln(fptr: [*c]fitsfile, ncols: c_int, datatype: [*c]c_int, colnum: [*c]c_int, firstrow: LONGLONG, nrows: LONGLONG, array: [*c]?*anyopaque, nulval: [*c]?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffpcls(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpcll(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpclb(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffpclsb(fptr: [*c]fitsfile, colnum: c_int, firstrow: LONGLONG, firstelem: LONGLONG, nelem: LONGLONG, array: [*c]i8, status: [*c]c_int) c_int;
